# huggingface-agents-course-final

./: .env.example  .gitignore  .last_failures.txt  README.md  agent_eval_api.json  app.py  debugging_journey.md  pyproject.toml  requirements.txt
docs/: architecture.md  code_review.md  json_repair_design.md  json_repair_impl_plan.md  sota_roadmap.md
logs/: json_repairs.jsonl
scratch/: debug_dataset.py  find_vision_tasks.py  test_chronicle.py  test_planner_recovery.py  verify_error_handling.py
scripts/: dev_run.py  dev_run_gaia.py
src/gaia_agent/: __init__.py  api_client.py  config.py  gaia_dataset.py  graph.py  json_repair.py  json_utils.py  llm_utils.py  models.py  prompts.py  runner.py  state.py
src/gaia_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gaia_agent/nodes/: executor.py  (+8 more)
tests/: problems  test_api_client.py  test_config.py  test_fal_vision.py  test_fix_json_repair.py  test_gemma_instructions.py  test_graph_smoke.py  test_import_smoke.py  test_jina_fetch.py  test_models.py  test_runner.py  test_state.py  test_v47_infrastructure.py  test_v47_infrastructure_v2.py  test_v48_retry_logic.py  test_v49_retry_fix.py  test_vision_config.py
tests/nodes/: test_executor.py  test_executor_exceptions.py  test_formatter.py  test_perception.py  test_planner.py  test_reflector.py  test_router.py  test_state_manager.py  test_verifier.py
tests/tools/: test_audio.py  test_ddg_search.py  test_files.py  test_filesystem_toolkit.py  test_python_exec.py  test_python_exec_debug.py  test_registry.py  test_search.py  test_web.py  test_youtube.py
(+11 files in other folders)
