[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "gradio",
  "requests",
  "pandas",
  "langgraph",
  "langchain-core",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
